[gd_scene load_steps=51 format=2]

[ext_resource path="res://sprites/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://sound/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://sound/hit.wav" type="AudioStream" id=5]
[ext_resource path="res://sound/die.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/return.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/change_item.wav" type="AudioStream" id=8]
[ext_resource path="res://sound/pickup.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/plant.wav" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 992, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 1056, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 1088, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 1120, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 928, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 672, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 704, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 736, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 608, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 544, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 832, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 864, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 37 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 43 ), SubResource( 43 ), SubResource( 43 ), SubResource( 43 ), SubResource( 43 ), SubResource( 43 ), SubResource( 43 ), SubResource( 43 ) ],
"loop": false,
"name": "die",
"speed": 12.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "fall",
"speed": 12.0
}, {
"frames": [ SubResource( 44 ), SubResource( 44 ) ],
"loop": false,
"name": "hit",
"speed": 12.0
}, {
"frames": [ SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 10 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 10 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "jump",
"speed": 12.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "shoot_fall",
"speed": 12.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": false,
"name": "shoot_idle",
"speed": 12.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "shoot_jump",
"speed": 12.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "shoot_run",
"speed": 12.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": false,
"name": "use_item_idle",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 5, 11 )

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 10.25, 4.5625 )

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 5, 1.5 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 5 )
shape = SubResource( 46 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sound"

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Sound"

[node name="Die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Sound"

[node name="Spawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "Sound"

[node name="ChangeItem" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "Sound"

[node name="Pickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
bus = "Sound"

[node name="Plant" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
bus = "Sound"

[node name="CoyoteCollider" type="Area2D" parent="."]
position = Vector2( -8, 12 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoyoteCollider"]
position = Vector2( 0, -0.5625 )
shape = SubResource( 45 )

[node name="FloorCollider" type="Area2D" parent="."]
position = Vector2( -1, 17 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorCollider"]
position = Vector2( 0, 0.5 )
shape = SubResource( 47 )

[connection signal="body_entered" from="CoyoteCollider" to="." method="_on_CoyoteCollider_body_entered"]
[connection signal="body_exited" from="CoyoteCollider" to="." method="_on_CoyoteCollider_body_exited"]
[connection signal="body_entered" from="FloorCollider" to="." method="_on_FloorCollider_body_entered"]
[connection signal="body_exited" from="FloorCollider" to="." method="_on_FloorCollider_body_exited"]
